--- a/src/SerialLoops/Views/Dialogs/SearchDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/SearchDialog.axaml
@@ -1,12 +1,11 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:assets="using:SerialLoops.Assets"
         mc:Ignorable="d" d:DesignWidth="550" d:DesignHeight="600"
-        x:DataType="vm:SearchDialogViewModel"
-        x:Class="SerialLoops.Views.Dialogs.SearchDialog"
+        xmlns:assets="using:SerialLoops.Assets"
+        xmlns:controls="using:SerialLoops.Controls"
         xmlns:i="using:Avalonia.Xaml.Interactivity"
         xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
         MinWidth="{Binding MinWidth}"
@@ -14,20 +13,22 @@
         Width="{Binding Width}"
         Height="{Binding Height}"
         Icon="/Assets/serial-loops.ico"
+        x:DataType="vm:SearchDialogViewModel"
+        x:Class="SerialLoops.Views.Dialogs.SearchDialog"
         Title="{x:Static assets:Strings.Search_Project}"
-        Name="SearchDialog">
+        Name="Dialog">
     <DockPanel>
         <Grid RowDefinitions="Auto,Auto,Auto,*" HorizontalAlignment="Center" VerticalAlignment="Top">
             <StackPanel IsVisible="False">
-                <Button Command="{Binding CloseCommand}" CommandParameter="{Binding #SearchDialog}" HotKey="{Binding CloseHotKey}"></Button>
-                <Button Command="{Binding DeepSearchCommand}" CommandParameter="{Binding #SearchDialog}" HotKey="{Binding DeepSearchHotKey}"></Button>
+                <Button Command="{Binding CloseCommand}" CommandParameter="{Binding #Dialog}" HotKey="{Binding CloseHotKey}"></Button>
+                <Button Command="{Binding DeepSearchCommand}" CommandParameter="{Binding #Dialog}" HotKey="{Binding DeepSearchHotKey}"></Button>
             </StackPanel>
-            <TextBox Grid.Row="0" Name="Search" Width="520" Margin="0 10"
+            <TextBox Grid.Row="0" Name="Search" Width="520" Margin="0 10" Text="{Binding SearchText}"
                      Watermark="{x:Static assets:Strings.Search___}">
                 <i:Interaction.Behaviors>
                     <ia:EventTriggerBehavior EventName="TextChanged" SourceObject="{Binding #Search}">
                         <ia:InvokeCommandAction Command="{Binding SearchCommand}"
-                                                CommandParameter="{Binding #SearchDialog}"/>
+                                                CommandParameter="{Binding #Dialog}"/>
                     </ia:EventTriggerBehavior>
                     <FocusOnAttachedToVisualTreeBehavior />
                 </i:Interaction.Behaviors>
@@ -36,16 +37,40 @@
                 <!-- Scope filters -->
                 <StackPanel Grid.Column="0" Spacing="5" Margin="0 0 5 0">
                     <TextBlock FontWeight="Bold" Text="{x:Static assets:Strings.Search_Scope}" />
-                    <ItemsRepeater>
+                    <ItemsRepeater ItemsSource="{Binding SearchScopes}">
                         <ItemsRepeater.Layout>
-                            <UniformGridLayout Orientation="Vertical" MaximumRowsOrColumns="5"/>
+                            <UniformGridLayout MaximumRowsOrColumns="10" Orientation="Vertical" ItemsJustification="Start" MinItemWidth="200"/>
                         </ItemsRepeater.Layout>
+                        <ItemsRepeater.ItemTemplate>
+                            <DataTemplate DataType="vm:LocalizedSearchScope">
+                                <Grid ColumnDefinitions="*,Auto">
+                                    <TextBlock Grid.Column="0" FontSize="16" Margin="0,7,7,0" Text="{Binding DisplayText}"/>
+                                    <CheckBox Grid.Column="1" IsChecked="{Binding IsActive}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsRepeater.ItemTemplate>
                     </ItemsRepeater>
                 </StackPanel>
                 <!-- Item type filters -->
                 <StackPanel Grid.Column="1" Spacing="5" Margin="5 0 0 0">
                     <TextBlock FontWeight="Bold" Text="{x:Static assets:Strings.Filter_by_Item}" />
-                    <Grid Name="TypeFiltersGrid" ColumnDefinitions="*,Auto,*,Auto,*,Auto" RowDefinitions="*,*,*,*,*,*,Auto" />
+                    <ItemsRepeater ItemsSource="{Binding ItemScopes}">
+                        <ItemsRepeater.Layout>
+                            <UniformGridLayout MaximumRowsOrColumns="10" Orientation="Vertical" ItemsJustification="Start" MinItemWidth="200"/>
+                        </ItemsRepeater.Layout>
+                        <ItemsRepeater.ItemTemplate>
+                            <DataTemplate DataType="vm:LocalizedItemScope">
+                                <Grid ColumnDefinitions="*,Auto">
+                                    <StackPanel Grid.Column="0" Spacing="3" Orientation="Horizontal">
+                                        <Svg Path="{Binding Icon}" Width="16" Height="16"/>
+                                        <TextBlock FontSize="16" Margin="0,7,7,0" Text="{Binding DisplayText}"/>
+                                    </StackPanel>
+                                    <CheckBox Grid.Column="1" IsChecked="{Binding IsActive}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsRepeater.ItemTemplate>
+                    </ItemsRepeater>
+                    <controls:LinkButton Text="{Binding ToggleText}" Command="{Binding ToggleItemScopesCommand}"/>
                 </StackPanel>
             </Grid>
             <TextBlock Grid.Row="2" Margin="10" FontWeight="Bold" Text="{Binding SearchStatusLabel}" TextAlignment="Center" />
